# CG

./: CMakeLists.txt
src/: Cube.h  Plane.h  Sphere.h  Triangle.h  a.out  bonus.cpp  glad.c  glad.h  hw1.cpp  ray.h  vec3.h
src/hw1/cpp/: colorfulLight.cpp  dusk.cpp  multiple.cpp  normal.cpp  rayPlane.cpp  shading.cpp  skybox.cpp
src/hw1/ppm/: colorfulLight.ppm  dusk.ppm  multiple.ppm  normal.ppm  rayinstersection.ppm  shadingLightSource(-1,1,0).ppm  shadingLightSource(0,0,0).ppm  shadingLightSource(1,1,0).ppm
